--- a/webapi_services/Properties/launchSettings.json
+++ b/webapi_services/Properties/launchSettings.json
@@ -22,7 +22,7 @@
       "dotnetRunMessages": "true",
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:45186",
+      "applicationUrl": "https://services.milleniumcorp.com.ec",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
