--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,59 @@ security_layer/bin/Debug/net5.0/business_layer.dll~bd0bbaa7605d60078b34c1c5cc4f6
 security_layer/bin/Debug/net5.0/business_layer.pdb~bd0bbaa7605d60078b34c1c5cc4f6c0140fa4045
 security_layer/bin/Debug/net5.0/security_layer.dll~bd0bbaa7605d60078b34c1c5cc4f6c0140fa4045
 security_layer/bin/Debug/net5.0/security_layer.pdb~bd0bbaa7605d60078b34c1c5cc4f6c0140fa4045
+business_layer/bin/Debug/net5.0/business_layer.deps.json
+business_layer/bin/Debug/net5.0/business_layer.dll
+business_layer/bin/Debug/net5.0/business_layer.pdb
+business_layer/bin/Debug/net5.0/data_access.dll
+business_layer/bin/Debug/net5.0/data_access.pdb
+business_layer/bin/Debug/net5.0/domain_layer.dll
+business_layer/bin/Debug/net5.0/domain_layer.pdb
+business_layer/bin/Debug/net5.0/ref/business_layer.dll
+business_layer/obj/Debug/net5.0/business_layer.csproj.CopyComplete
+business_layer/obj/Debug/net5.0/business_layer.csproj.CoreCompileInputs.cache
+business_layer/obj/Debug/net5.0/business_layer.dll
+business_layer/obj/Debug/net5.0/business_layer.pdb
+business_layer/obj/Debug/net5.0/ref/business_layer.dll
+data_access/bin/Debug/net5.0/data_access.deps.json
+data_access/bin/Debug/net5.0/data_access.dll
+data_access/bin/Debug/net5.0/data_access.pdb
+data_access/bin/Debug/net5.0/data_access.runtimeconfig.dev.json
+data_access/bin/Debug/net5.0/data_access.runtimeconfig.json
+data_access/bin/Debug/net5.0/domain_layer.dll
+data_access/bin/Debug/net5.0/domain_layer.pdb
+data_access/bin/Debug/net5.0/ref/data_access.dll
+data_access/obj/Debug/net5.0/data_access.AssemblyInfo.cs
+data_access/obj/Debug/net5.0/data_access.AssemblyInfoInputs.cache
+data_access/obj/Debug/net5.0/data_access.csproj.AssemblyReference.cache
+data_access/obj/Debug/net5.0/data_access.csproj.CopyComplete
+data_access/obj/Debug/net5.0/data_access.csproj.CoreCompileInputs.cache
+data_access/obj/Debug/net5.0/data_access.dll
+data_access/obj/Debug/net5.0/data_access.GeneratedMSBuildEditorConfig.editorconfig
+data_access/obj/Debug/net5.0/data_access.genruntimeconfig.cache
+data_access/obj/Debug/net5.0/data_access.pdb
+data_access/obj/Debug/net5.0/ref/data_access.dll
+domain_layer/bin/Debug/net5.0/domain_layer.deps.json
+domain_layer/bin/Debug/net5.0/domain_layer.dll
+domain_layer/bin/Debug/net5.0/domain_layer.pdb
+domain_layer/bin/Debug/net5.0/ref/domain_layer.dll
+domain_layer/obj/Debug/net5.0/domain_layer.csproj.CoreCompileInputs.cache
+domain_layer/obj/Debug/net5.0/domain_layer.dll
+domain_layer/obj/Debug/net5.0/domain_layer.pdb
+domain_layer/obj/Debug/net5.0/ref/domain_layer.dll
+security_layer/bin/Debug/net5.0/business_layer.dll
+security_layer/bin/Debug/net5.0/business_layer.pdb
+security_layer/bin/Debug/net5.0/data_access.dll
+security_layer/bin/Debug/net5.0/data_access.pdb
+security_layer/bin/Debug/net5.0/domain_layer.dll
+security_layer/bin/Debug/net5.0/domain_layer.pdb
+security_layer/bin/Debug/net5.0/security_layer.deps.json
+security_layer/bin/Debug/net5.0/security_layer.dll
+security_layer/bin/Debug/net5.0/security_layer.pdb
+security_layer/bin/Debug/net5.0/ref/security_layer.dll
+security_layer/obj/Debug/net5.0/security_layer.csproj.CopyComplete
+security_layer/obj/Debug/net5.0/security_layer.csproj.CoreCompileInputs.cache
+security_layer/obj/Debug/net5.0/security_layer.dll
+security_layer/obj/Debug/net5.0/security_layer.dll~bd0bbaa7605d60078b34c1c5cc4f6c0140fa4045
+security_layer/obj/Debug/net5.0/security_layer.pdb
+security_layer/obj/Debug/net5.0/security_layer.pdb~bd0bbaa7605d60078b34c1c5cc4f6c0140fa4045
+security_layer/obj/Debug/net5.0/ref/security_layer.dll
