--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,4 @@ security_layer/obj/Debug/net5.0/security_layer.dll~bd0bbaa7605d60078b34c1c5cc4f6
 security_layer/obj/Debug/net5.0/security_layer.pdb
 security_layer/obj/Debug/net5.0/security_layer.pdb~bd0bbaa7605d60078b34c1c5cc4f6c0140fa4045
 security_layer/obj/Debug/net5.0/ref/security_layer.dll
+data_access/obj/Debug/net5.0/data_access.GeneratedMSBuildEditorConfig.editorconfig~dac0172183da8db29bd583496d1dbe083833ba50
